[package]
name = "maprando-plando-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
maprando = { path = "../MapRandomizer/rust/maprando" }
maprando-game = { path = "../MapRandomizer/rust/maprando-game" }
maprando-logic = { path = "../MapRandomizer/rust/maprando-logic" }
anyhow = { version = "1.0.68", features = ["backtrace"] }
hashbrown = { version = "0.14.5", features = ["serde"] }
rand = "0.8.5"
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["full"] }