[package]
name = "maprando-plando-web"
version = "0.1.0"
edition = "2024"

[dependencies]
maprando-plando-backend = { path = "../maprando-plando-backend" }
maprando = { path = "../MapRandomizer/rust/maprando" }
maprando-game = { path = "../MapRandomizer/rust/maprando-game" }

actix-files = "0.6.8"
actix-multipart = "0.7.2"
actix-web = "4.11.0"
anyhow = "1.0.100"
askama = "0.14.0"
base64 = "0.22.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
#sha3 = "0.10.8"
#sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres" ] }